# conflict-snapshots

./: CHANGES  COPYING  MANIFEST  aclocal.m4  configure  configure.in  conflict.1  conflict.c  conflict.h  makefile.in  makefile.wnt  msdos.c  os2.c  run_test.sh  txtalloc.c  unix.c
package/: conflict.cygport  conflict.spec
package/debian/: changelog  control  copyright  rules  watch
win32/: dirent.c  dirent.h
