dnl ---------------------------------------------------------------------------
dnl Copyright 1995-2021,2022 by Thomas E. Dickey.
dnl All Rights Reserved.
dnl
dnl Permission to use, copy, modify, and distribute this software and its
dnl documentation for any purpose and without fee is hereby granted, provided
dnl that the above copyright notice appear in all copies and that both that
dnl copyright notice and this permission notice appear in supporting
dnl documentation, and that the name of the above listed copyright holder(s)
dnl not be used in advertising or publicity pertaining to distribution of the
dnl software without specific, written prior permission.
dnl
dnl THE ABOVE LISTED COPYRIGHT HOLDER(S) DISCLAIM ALL WARRANTIES WITH REGARD
dnl TO THIS SOFTWARE, INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND
dnl FITNESS, IN NO EVENT SHALL THE ABOVE LISTED COPYRIGHT HOLDER(S) BE LIABLE
dnl FOR ANY SPECIAL, INDIRECT OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
dnl WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
dnl ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR
dnl IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
dnl ---------------------------------------------------------------------------
dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id: configure.in,v 6.15 2022/10/02 14:29:25 tom Exp $
AC_REVISION($Revision: 6.15 $)
AC_PREREQ(2.52.20200802)
AC_INIT(conflict.c)
AC_CONFIG_HEADER(config.h:config_h.in)

CF_CHECK_CACHE

case $host_os in
*os2*)
	SYSTEM=msdos
	;;
*)
	SYSTEM=unix
	;;
esac
AC_SUBST(SYSTEM)

CF_PROG_CC
AC_PROG_INSTALL
AC_C_CONST
AC_CONST

CF_PROG_EXT

CF_WITHOUT_X

CF_DISABLE_ECHO
CF_MAKE_TAGS
CF_PROG_LINT
CF_INSTALL_OPTS

AC_PROG_EGREP
AC_PROG_FGREP

AC_HEADER_STDC
AC_CHECK_HEADERS(stdlib.h unistd.h)
AC_CHECK_HEADERS(getopt.h string.h malloc.h sys/param.h)
AC_HEADER_DIRENT

CF_XOPEN_SOURCE

AC_TYPE_SIZE_T
AC_CHECK_TYPE(ino_t, unsigned)
AC_CHECK_TYPE(dev_t, unsigned)

AC_CHECK_FUNCS(getcwd getopt link symlink realpath strcasecmp strrchr strdup)

CF_ENABLE_WARNINGS
CF_DISABLE_LEAKS
CF_WITH_MAN2HTML

AC_OUTPUT(makefile,,,cat)
CF_MAKE_DOCS(conflict,1)
